[gd_scene load_steps=8 format=3 uid="uid://kp86by3ecpxl"]

[ext_resource type="Script" path="res://ui/editor_ui/editor.gd" id="1_efp4u"]
[ext_resource type="Theme" uid="uid://blypv21oquull" path="res://ui/editor_ui/sidebar_buttons.tres" id="2_gk7y5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gw1x3"]
content_margin_top = 38.0
bg_color = Color(0.137255, 0.137255, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xqde"]
corner_radius_top_right = 6
corner_radius_bottom_right = 6

[sub_resource type="Gradient" id="Gradient_xvf8o"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.237762, 0.776224, 1)
colors = PackedColorArray(0.458205, 0, 1, 1, 0.627202, 0.194706, 1, 1, 0.627451, 0.196078, 1, 1, 0.458824, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p3bsf"]
gradient = SubResource("Gradient_xvf8o")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1g2vq"]
texture = SubResource("GradientTexture2D_p3bsf")

[node name="EditorHBox" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1_efp4u")

[node name="SidebarPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gw1x3")

[node name="MarginContainer" type="MarginContainer" parent="SidebarPanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="SidebarVBox" type="VBoxContainer" parent="SidebarPanel/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.698039)
layout_mode = 2
theme = ExtResource("2_gk7y5")
theme_override_constants/separation = 6

[node name="IndicatorControl" type="Control" parent="SidebarPanel"]
layout_mode = 2
mouse_filter = 2

[node name="SidebarIndicator" type="Panel" parent="SidebarPanel/IndicatorControl"]
unique_name_in_owner = true
clip_children = 1
custom_minimum_size = Vector2(3, 40)
layout_mode = 0
offset_right = 3.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xqde")

[node name="Texture" type="Panel" parent="SidebarPanel/IndicatorControl/SidebarIndicator"]
layout_mode = 0
offset_right = 3.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1g2vq")

[node name="CenterPanel" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="LayoutContainer" type="TabContainer" parent="CenterPanel"]
unique_name_in_owner = true
layout_mode = 2
tabs_visible = false

[connection signal="gui_input" from="SidebarPanel" to="." method="_on_sidebar_gui_event"]
